# EngineeringMathematics

./: CMakeLists.txt  README.md  main.cpp  main.cpp.backup
include/: LogisticRegression.hpp  Matrix.hpp  TransposeOperator.hpp  Vector.hpp
